--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lng="eng">
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <link  rel="stylesheet" href="style.css">
+   <title>Solar system</title>
+    </head>
    <body>
     <div class="container">
         <div class="sun"></div>
